--- a/index.html
+++ b/index.html
@@ -5,12 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    <button class="choice">Rock</button>
-    <button class="choice">Paper</button>
-    <button class="choice">Scissors</button>
+    <header>
+        <h1>Rock, Paper, Scissors!</h1>
+    </header>
+
+    <section class="playing-field">
+        <div class="player">
+            <h2>PLAYER</h2>
+            <div class="choosed-player">
+
+            </div>
+        </div>
+
+        <div class="versus">
+            X
+        </div>
+
+        <div class="computer">
+            <h2>COMPUTER</h2>
+            <div class="choosed-computer">
+
+            </div>
+        </div>
+    </section>
+
+    <section class="controls">
+        <span class="choice">Rock</span>
+        <span class="choice">Paper</span>
+        <span class="choice">Scissors</span>
+    </section>
     
 </body>
 </html>
