Make game winner message show only after one reaches 5 points

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <div class="results">
                 <div class="winner flex-column">
-                    <div">GAME WINNER: <span class="js-winner"></span></div>
+                    <div"><span class="js-winner"></span></div>
                 </div>
             </div>
         </section>
